--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,47 +1,10 @@
-<div class="col">
+<div class="container">
+<h1 class="display-3 text-center">Neck Bands</h1>
+</div>
+<!--nesting products component-->
+<div class="container">
+  <app-products></app-products>
+</div>
 
-    <div class="row-md-6 p-5 m-5">
-  
-      <h1 class="text-center display-1"> Neck band</h1>
-  
-    </div>
-  
-    <div class="row-md-6">
-  
-    <div class="container border bg-dark bg-gradient">
-      <div class="p-4">
-        <div class="row">
-  
-          <div class="col-lg-4 col-md-6">
-      <app-products></app-products>
-      </div>
-      <div class="col-lg-4 col-md-6">
-         <app-products></app-products>
-         </div>
-   
-       <div class="col-lg-4 col-md-6">
-         <app-products></app-products>
-       </div>
-     </div>
-   
-           <br>
-           <div class="row">
-       <div class="col-lg-4 col-md-6">
-         <app-products></app-products>
-       </div>
-   
-       <div class="col-lg-4 col-md-6">
-         <app-products></app-products>
-       </div>
-   
-       <div class="col-lg-4 col-md-6">
-         <app-products></app-products>
-       </div>
-     </div>
-   </div>
-   
-   </div>
-   </div>
-   
-   </div>
-      
+<!--nesting footer component-->
+<div style="position:absolute; bottom:0px; width:100%"><app-footer></app-footer></div>
