--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,18 +1,6 @@
-<div class="card shadow">
-    <div class="row-md-4">
-        <img src="https://360market.in/wp-content/uploads/2020/07/MI-neck-band-website.png" class="w-50" alt="...">
-    <div class="card-body row-md-8">
-        <h3>MI Neck band</h3>
-        <hr>
-        BRAND :- MI
-         <br>
-        CONNECTOR TYPE:- WIRELESS
-        <br>
-         COLOUR :- BLACK
-        <br>
-        PRICE :- 1,599/-
-         <br>
-       <button class="btn btn-warning float-end">ADD TO CART</button>
-    </div>
-  </div>
+<div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4 mt-5 mb-5">
+
+  <div class="col" *ngFor="let p pf products "></div>
+  <app-product *ngFor="let p of products"></app-product>
   
+  </div> 
