routing and navigation i8s implemented

--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,6 +1,6 @@
 <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4 mt-5 mb-5">
 
-  <div class="col" *ngFor="let p pf products "></div>
-  <app-product *ngFor="let p of products"></app-product>
-  
+  <div class="col" *ngFor="let prObj of products ">
+  <app-product [productObj]=prObj></app-product>
+</div>
   </div> 
