--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,40 @@
-<div class="container">
-<h1 class="display-3 text-center">Neck Bands</h1>
-</div>
+<div class="d-flex flex-column h-100">
+  <!--creating navbar-->
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">Navbar</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" routerLink="home" routerLinkActive="active">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="register" routerLinkActive="active">Register</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="login" routerLinkActive="active">Login</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="contactus" routerLinkActive="active">ContactUs</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="products" routerLinkActive="active">Products</a>
+          </li>
+      </ul>
+    </div>
+  </div>
+</nav>
 <!--nesting products component-->
 <div class="container">
-  <app-products></app-products>
+  <router-outlet></router-outlet>
 </div>
 
 <!--nesting footer component-->
-<div style="position:absolute; bottom:0px; width:100%"><app-footer></app-footer></div>
+
+  <app-footer class="mt-auto"></app-footer>
+ 
+
+</div>
