--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -1,8 +1,8 @@
 <div class="card h=100 shadow" >
-    <img src="..." class="card-img-top w-100" alt="...">
+    <img src="{{productObj.productImage}}"class="card-img-top w-100" height="200px" alt="...">
     <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-      <a href="#" class="btn btn-primary">Go somewhere</a>
+      <h5 class="card-title" style="color: #1b456b;">{{productObj.productTitle}}</h5>
+      <p class="card-text">{{productObj.description }}</p>
+      <a href="#" class="btn btn-primary"><i class="fas fa-plus-square"></i> Add to cart</a>
     </div>
   </div>
